[package]
name = "bevy_quickstart_game"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.16.1"
rand = "0.9.2"
bevy_rapier3d = "0.31.0"
bevy_mod_raycast = "0.18.0"
queues = "1.0.2"
tokio = "1.40.0"
noise = "0.9.0"
bevy_health_bar3d = "3.5.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
bevy_water = "0.16"
thiserror = "2.0.17"
serde = { version = "1.0.225", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
