[package]
name = "bevy_quickstart_game"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.16.1"
bevy_rapier3d = "0.31.0"
thiserror = "2.0.17"
serde = { version = "1.0.225", features = ["derive"] }
log = "0.4.28"
rand = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
