[package]
name = "mission_ares"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16.1", features = [
    "track_location",
    "configurable_error_handler",
] }

bevy_rapier3d = "0.31.0"
thiserror = "2.0.17"
serde = { version = "1.0.225", features = ["derive"] }
log = "0.4.28"
rand = "0.9.2"
interact = "0.3.6"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
